Finish web-skelet

--- a/index.html
+++ b/index.html
@@ -11,12 +11,30 @@
 </head>
 <body>
 
-  <!-- Build The Community Your Fans Will Love
+  <div id="left">
+    <img src="images/logo.svg" alt="logo">
+    <img src="images/illustration-mockups.svg" alt="illustration-mockups">
+  </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  <div id="right">
+    <header id="right-heaeder">Build The Community Your Fans Will Love</header>
+    <p id="content">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+      Create connections with your users as you engage in genuine discussion.</p>
+    
+    <button id="register-button">Register </button>
 
-  Register -->
+    <div id="social">
+      <div id="facebook"></div>
+      <div id="twitter"></div>
+      <div id="instagram"></div>
+    </div>
+  </div>
+
+  <!-- 
+
+   
+
+  -->
 
 </body>
 </html>
