Start with pc/mobile design/responsive

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 
   <div id="left">
-    <img src="images/logo.svg" alt="logo">
-    <img src="images/illustration-mockups.svg" alt="illustration-mockups">
+    <img id="logo" src="images/logo.svg" alt="logo">
+    <img id="illustration" src="images/illustration-mockups.svg" alt="illustration-mockups">
   </div>
 
   <div id="right">
-    <header id="right-heaeder">Build The Community Your Fans Will Love</header>
+    <header id="right-heaeder">Build The Community<br>Your Fans Will Love</header>
     <p id="content">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
       Create connections with your users as you engage in genuine discussion.</p>
     
