--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles/style.css">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Orange Broom | Huddle landing page with single introductory section</title>
 </head>
 <body>
@@ -24,9 +24,9 @@
     <button id="register-button">Register </button>
 
     <div id="social">
-      <div id="facebook"></div>
-      <div id="twitter"></div>
-      <div id="instagram"></div>
+      <div class="soc" id="facebook"><i class="fa-brands fa-facebook-f"></i></div>
+      <div class="soc" id="twitter"><i class="fa-brands fa-twitter"></i></div>
+      <div class="soc" id="instagram"><i class="fa-brands fa-instagram"></i></div>
     </div>
   </div>
 
